# WCP-Library

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish-to-pypi.yaml  tests.yaml
WCP_Library/: __init__.py
WCP_Library/async_credentials/: __init__.py
WCP_Library/async_sql/: oracle.py  postgres.py
WCP_Library/credentials/: __init__.py
WCP_Library/sql/: oracle.py  postgres.py
docs/: wcp_library_sharepoint_drive_support_spec.md  wiki
docs/Wiki Docs/: #Extra Uses  Connection - FTP SFTP  Connection - Oracle  Connection - Postgres  Credentials - Asynchronous  Credentials - Expected Dictionaries  Credentials ‐ Synchronous  Helper - Browser Automation  Helper - Microsoft Graph API  Helper ‐ Emailing  Helper ‐ Informatica API  Helper ‐ Logging  Helper ‐ Time  Home
docs/superpowers/plans/: 2026-04-20-sharepoint-drive-support.md  2026-04-21-wcp-library-transaction-context.md  2026-04-22-tenacity-retry-consolidation.md
docs/superpowers/specs/: 2026-04-21-wcp-library-transaction-context-design.md  2026-04-22-tenacity-retry-consolidation-design.md
tests/: test_retry.py
tests/credentials/: test_api.py  test_credential_manager_async.py  test_credential_manager_sync.py  test_ftp.py  test_init.py  test_internet.py  test_oracle.py  test_postgres.py
tests/emailing/: test_emailing.py
tests/ftp/: test_ftp.py  test_sftp.py
tests/graph/: test_mail.py  test_request.py  test_sharepoint.py  test_subscription.py
tests/logging/: test_logging.py
tests/sql/: test_oracle.py  test_postgres_autocommit.py  test_postgres_executor.py  test_postgres_retry_transaction.py  test_postgres_retry_transaction_sync.py  test_postgres_transaction.py  test_postgres_transaction_sync.py
tests/time/: test_time.py
wcp_library/: __init__.py  emailing.py  file_system_utils.py  logging.py  retry.py
wcp_library/browser_automation/: browser.py  interactions.py  testing_suite.py
wcp_library/credentials/: __init__.py  _credential_manager_asynchronous.py  _credential_manager_synchronous.py  api.py  credential_manager_asynchronous.py  internet.py
wcp_library/ftp/: sftp.py
wcp_library/graph/: __init__.py  mail.py  sharepoint.py  subscription.py
wcp_library/sql/: __init__.py  oracle.py  postgres.py
