[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wcap-library"
version = "1.0.0"
authors = [
    { name="Mitch Petersen", email="mitch.petersen@wcap.ca" },
]
description = "Common utilities for WCAP projects"
dynamic = ["readme"]
requires-python = ">=3.7"
classifiers = [
   "Programming Language :: Python :: 3",
   "Operating System :: OS Independent",
]

[tool.setuptools.packages]
find = {}

[tool.setuptools.dynamic]
readme = {file = "README.md", content-type = "text/markdown"}