[project]
name = "wcp-library"
version = "1.11.0"
description = "Common utilites for internal development at WCP"
authors = [{ name = "Mitch-Petersen", email = "mitch.petersen@wcap.ca" }]
readme = "README.md"
repository = "https://github.com/Whitecap-DNA/WCP-Library"
documentation = "https://github.com/Whitecap-DNA/WCP-Library/wiki"
packages = [{ include = "wcp_library" }]
dynamic = ["dependencies"]
requires-python = ">=3.12.0"

[tool.poetry.dependencies]
aiofiles = "^25.1.0"
aiohttp = "^3.13.4"
cryptography = "^46.0.7"
ftputil = "^5.1.0"
get-gecko-driver = "^1.5.1"
oracledb = "^3.4.1"
pandas = "^2.2.3"
paramiko = "^3.5.1"
pip-system-certs = "^4.0"
psycopg = "^3.2.7"
psycopg-binary = "^3.3.2"
psycopg-pool = "^3.3.0"
pycryptodome = "^3.23.0"
pytz = "^2025.2"
requests = "2.32.5"
selenium = "^4.39.0"
tenacity = "~9.1.4"
webdriver-manager = "^4.0.2"
yarl = "^1.20.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
ruff = "^0.1.0"
black = "^26.3.1"
pytest = "^8.3.0"
pytest-asyncio = "^0.25.0"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
