[project]
name = "wcp-library"
version = "1.13.3"
description = "Common utilites for internal development at WCP"
authors = [{ name = "Mitch-Petersen", email = "mitch.petersen@wcap.ca" }]
readme = "README.md"
repository = "https://github.com/Whitecap-DNA/WCP-Library"
documentation = "https://github.com/Whitecap-DNA/WCP-Library/wiki"
packages = [{ include = "wcp_library" }]
dynamic = ["dependencies"]
requires-python = ">=3.12.0"

[tool.poetry.dependencies]
aiofiles = "^25.1.0"
aiohttp = "^3.14.1"
cryptography = "^48.0.1"
ftputil = "^5.2.0"
oracledb = "^3.4.2"
pandas = "^2.3.3"
paramiko = "^5.0.0"
psycopg = "^3.3.4"
psycopg-binary = "^3.3.4"
psycopg-pool = "^3.3.1"
pycryptodome = "^3.23.0"
pytz = "^2025.2"
requests = "2.34.2"
selenium = "^4.44.0"
tenacity = "~9.1.4"
yarl = "^1.24.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.20.2"
ruff = "^0.1.15"
black = "^26.5.1"
pytest = "^9.0.3"
pytest-asyncio = "^1.4.0"
pytest-mock = "^3.15.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
